--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,9 @@
   -webkit-box-sizing: border-box;
   margin: 0;
   padding: 0;
+  --box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  --border-radius: 20px;
+  --white-background: #fff;
 }
 html,
 body,
