--- a/frontend/src/Features/dashboard/style.css
+++ b/frontend/src/Features/dashboard/style.css
@@ -8,18 +8,21 @@
   background-color: var(--white-background);
 }
 .dashboard-card h4 {
-  font-size: 34px;
+  font-size: 25px;
   font-style: normal;
   font-weight: 500;
-  line-height: 40px; /* 117.647% */
+  line-height: 20px; /* 117.647% */
 }
 .dashboard-card p {
   color: rgba(0, 0, 0, 0.5);
 
-  font-size: 20px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 120% */
+  line-height: 15px; /* 120% */
+}
+.css-mhc70k-MuiGrid-root > .MuiGrid-item {
+  padding-top: 10px !important;
 }
 
 .dashboard-card .card-icon {
