--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -364,6 +364,32 @@ label {
   font-family: "Lato", sans-serif;
   box-shadow: 0px 3px 27px 0px rgba(0, 0, 0, 0.17);
 }
+.submit-button {
+  -moz-user-select: none;
+  background: #000000 !important;
+  border: medium none;
+  border-radius: 0;
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 1.3;
+  margin-top: 10px;
+  padding: 15px 0;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transition: all 0.3s ease 0s;
+  vertical-align: middle;
+  white-space: nowrap;
+  font-family: "Lato", sans-serif;
+  box-shadow: 0px 3px 27px 0px rgba(0, 0, 0, 0.17);
+  cursor: pointer;
+}
+.submit-button:hover {
+  background: #c2945a !important;
+}
 .btn:hover {
   box-shadow: none;
 }
@@ -1768,7 +1794,7 @@ header.side-header {
   width: 100%;
   position: relative;
 }
-#search-modal .modal-dialog .modal-content form input {
+#search-modal .modal-dialog .modal-content form .input {
   width: 100%;
   font-size: 36px;
   border: none;
@@ -1962,7 +1988,7 @@ header.side-header {
   line-height: 22px;
   padding: 0 50px;
 }
-.oc-newsletter form input {
+.oc-newsletter form .input {
   width: 100%;
   background: #fff;
   border: 1px solid #ebebeb;
@@ -2961,7 +2987,7 @@ header.side-header {
   line-height: 1;
   font-family: "Lato", sans-serif;
 }
-.checkout-form .form-grp input {
+.checkout-form .form-grp .input {
   width: 100%;
   border: 1px solid #dcdcdc;
   border-radius: 3px;
@@ -3217,7 +3243,7 @@ header.side-header {
 .side-search-bar form {
   position: relative;
 }
-.side-search-bar form input {
+.side-search-bar form .input {
   width: 100%;
   border: 1px solid #e1e1e1;
   padding: 5px 20px;
@@ -3537,7 +3563,7 @@ header.side-header {
 .cart-plus-minus form {
   position: relative;
 }
-.cart-plus-minus form input {
+.cart-plus-minus form .input {
   width: 100%;
   border: 1px solid #f0f0f0;
   padding: 15px 45px 15px 15px;
@@ -3802,7 +3828,7 @@ header.side-header {
   margin-bottom: 10px;
 }
 .comment-form.review-form textarea,
-.comment-form.review-form input {
+.comment-form.review-form .input {
   background: #fff;
 }
 .comment-form.review-form .comment-check-box label {
@@ -3887,7 +3913,7 @@ header.side-header {
   align-items: center;
   flex-wrap: wrap;
 }
-.cart-coupon form input {
+.cart-coupon form .input {
   padding: 20px 20px 15px 0;
   border: none;
   font-family: "Lato", sans-serif;
@@ -5109,7 +5135,7 @@ header.side-header {
   margin: 0 auto;
   position: relative;
 }
-.newsletter-form input {
+.newsletter-form .input {
   width: 100%;
   background: transparent;
   border: none;
@@ -5146,7 +5172,7 @@ header.side-header {
 .newsletter-style-two .newsletter-form button {
   color: #001921;
 }
-.newsletter-style-two .newsletter-form input {
+.newsletter-style-two .newsletter-form .input {
   border-bottom: 2px solid #5a5a5e;
 }
 
@@ -5227,13 +5253,17 @@ header.side-header {
   flex: 0 0 33.3333%;
   margin-top: 15px;
 }
-.reservation-form-top .form-grp input {
+.reservation-form-top .form-grp .input {
   width: 100%;
   color: #fff;
   border: 1px solid rgb(54, 54, 54);
   background: rgba(28, 26, 28, 0.769);
   padding: 15px 30px 15px 65px;
   font-weight: 500;
+}
+.form-grp .required-msg {
+  color: red;
+  font-size: 12px;
 }
 .reservation-form-top .form-grp input::placeholder {
   color: #fff;
@@ -5830,7 +5860,7 @@ header.side-header {
   font-weight: 500;
   color: #6c6c6c;
 }
-.comment-form input {
+.comment-form .input {
   width: 100%;
   padding: 15px 20px;
   border: none;
@@ -5855,7 +5885,7 @@ header.side-header {
 .comment-form button:hover {
   color: #fff;
 }
-.comment-check-box input {
+.comment-check-box .input {
   width: auto;
   margin: 5px 10px 0 0;
 }
@@ -6557,4 +6587,44 @@ header.side-header {
   .ctn-preloader .animation-preloader .txt-loading {
     font: bold 2em "Rubik", sans-serif;
   }
+}
+
+.input-file {
+  background: #fff none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 0;
+  color: #001d2a;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 1.3;
+  margin-bottom: 0;
+  padding: 15px 28px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transition: all 0.3s ease 0s;
+  vertical-align: middle;
+  white-space: nowrap;
+  font-family: "Lato", sans-serif;
+  box-shadow: 0px 3px 27px 0px rgba(0, 0, 0, 0.17);
+  cursor: pointer;
+}
+.input-file input[type="file"] {
+  display: none;
+}
+.input-file:hover {
+  background: #000;
+}
+
+.input-file:focus,
+.input-file:active {
+  opacity: 0.85;
+  box-shadow: none;
+}
+
+.input-file svg {
+  width: 1.25rem;
+  height: 1.25rem;
 }
