--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,3 +75,13 @@ h3 {
 .css-mj2xxh {
   height: auto !important;
 }
+.css-10hburv-MuiTypography-root {
+  margin: 0;
+  font-family: "lato";
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+  display: block;
+  color:#fff
+}
