--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -688,6 +688,8 @@ label {
   top: 52px;
   transition: all 0.5s ease 0s;
   width: 350px;
+  height: 500px;
+  overflow: scroll;
   z-index: 9;
   box-shadow: 0px 12px 24px 0px rgba(120, 120, 120, 0.3);
   visibility: hidden;
@@ -749,6 +751,7 @@ label {
   font-size: 14px;
   margin-left: 0;
   opacity: 1;
+  color: #000;
 }
 .header-shop-cart .minicart .del-icon {
   margin-top: 30px;
@@ -4157,14 +4160,14 @@ header.side-header {
 
 .thumb .add-to-cart {
   display: block;
-  width: 80%;
+  width: 100%;
   background-color: #f9f9f9;
   color: #f9f9f9;
   text-align: center;
   border: 0;
   border-radius: 3px;
   position: absolute;
-  bottom: 50px;
+  bottom: 35px;
   left: 0;
   right: 0;
   z-index: 11;
