last minutes commit

--- a/frontend/src/Components/sidebar/style.css
+++ b/frontend/src/Components/sidebar/style.css
@@ -2,7 +2,7 @@
   color: #fff !important;
 }
 .active {
-  color: rgb(255, 213, 0) !important;
+  color: #c2945a !important;
 }
 .css-10hburv-MuiTypography-root {
   font-size: 18px !important;
