--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -83,5 +83,13 @@ h3 {
   line-height: 1.5;
   letter-spacing: 0.00938em;
   display: block;
-  color:#fff
+  color: #fff;
+}
+
+.main-item {
+  background-color: #fff;
+  border-radius: var(--border-radius);
+  width: 100%;
+  height: 100%;
+  box-shadow: var(--box-shadow);
 }
