--- a/frontend/src/Features/dashboard/style.css
+++ b/frontend/src/Features/dashboard/style.css
@@ -39,3 +39,11 @@
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   color: #003f8f;
 }
+
+.main-item {
+  background-color: #fff;
+  border-radius: var(--border-radius);
+  width: 100%;
+  height: 100%;
+  box-shadow: var(--box-shadow);
+}
